--- a/Develompent/Frontend/package.json
+++ b/Develompent/Frontend/package.json
@@ -30,6 +30,7 @@
     "pe7-icon": "1.0.4",
     "react": "16.12.0",
     "react-apexcharts": "1.3.6",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "16.12.0",
     "react-flag-kit": "0.3.1",
     "react-ionicons": "3.1.4",
