Change fav-icon, title

--- a/Frontend/public/manifest.json
+++ b/Frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Shards Dashboard Lite React",
-  "name": "Shards Dashboard Lite React",
+  "short_name": "Brains Share",
+  "name": "Brains Share",
   "icons": [
     {
       "src": "favicon.ico",
