--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "camelize": "^1.0.0",
     "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
@@ -11,14 +13,16 @@
     "dateformat": "^3.0.3",
     "flux": "^3.1.3",
     "lodash.find": "^4.6.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.7.0-alpha.2",
+    "react-data-table-component": "^6.11.0",
+    "react-dom": "^16.7.0-alpha.2",
     "react-ga": "^2.5.6",
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "shards-react": "^1.0.0",
-    "shortid": "^2.2.14"
+    "shortid": "^2.2.15",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
