--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,12 @@
     "cross-env": "^5.2.0",
     "dateformat": "^3.0.3",
     "flux": "^3.1.3",
+    "history": "^5.0.0",
     "lodash.find": "^4.6.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "node-sass": "^4.14.1",
+    "react": "^16.7.0-alpha.2",
+    "react-awesome-slider": "^4.1.0",
+    "react-dom": "^16.7.0-alpha.2",
     "react-ga": "^2.5.6",
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
