--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "animate.css": "^4.1.0",
     "camelize": "^1.0.0",
     "chart.js": "^2.7.3",
