--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-swipeable-views": "^0.13.9",
     "shards-react": "^1.0.0",
     "shortid": "^2.2.15",
     "styled-components": "^5.1.1"
