--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,15 +12,18 @@
     "camelize": "^1.0.0",
     "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
+    "cldr": "^5.7.0",
     "cross-env": "^5.2.0",
     "dateformat": "^3.0.3",
     "flux": "^3.1.3",
+    "globalize": "^1.5.0",
     "history": "^5.0.0",
     "lodash.find": "^4.6.0",
     "node-sass": "^4.14.1",
     "react": "^16.7.0-alpha.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-awesome-slider": "^4.1.0",
+    "react-big-calendar": "^0.27.0",
     "react-data-table-component": "^6.11.0",
     "react-dom": "^16.7.0-alpha.2",
     "react-ga": "^2.5.6",
