--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,7 +33,8 @@
     "react-swipeable-views": "^0.13.9",
     "shards-react": "^1.0.0",
     "shortid": "^2.2.15",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "axios": "^0.19.2"
   },
   "scripts": {
     "start": "react-scripts start",
