--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "animate.css": "^4.1.0",
+    "axios": "^0.19.2",
     "camelize": "^1.0.0",
     "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
@@ -27,14 +28,14 @@
     "react-data-table-component": "^6.11.0",
     "react-dom": "^16.7.0-alpha.2",
     "react-ga": "^2.5.6",
+    "react-images-upload": "^1.2.8",
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-swipeable-views": "^0.13.9",
     "shards-react": "^1.0.0",
     "shortid": "^2.2.15",
-    "styled-components": "^5.1.1",
-    "axios": "^0.19.2"
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
