--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Kejol8s0amBhd20Yu2EIHLkyqapzjJPC4hvY4NYyfKc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -31,6 +31,11 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+
+S3_KEY=AKIAUBTWQ2NEX4ITTGOH
+S3_SECRET=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
+S3_REGION=us-west-2
+S3_BUCKET=brainshares
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
