--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.7.0-alpha.2",
     "react-ga": "^2.5.6",
     "react-images-upload": "^1.2.8",
+    "react-loader-spinner": "^3.1.14",
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
