--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,7 @@
     "react-ga": "^2.5.6",
     "react-images-upload": "^1.2.8",
     "react-loader-spinner": "^3.1.14",
+    "react-notifications-component": "^2.4.0",
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
