--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,6 +34,7 @@
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-simple-dropdown": "^3.2.3",
     "react-swipeable-views": "^0.13.9",
     "shards-react": "^1.0.0",
     "shortid": "^2.2.15",
