--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -8,11 +8,11 @@ FRONT_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=brainsshare2.cviqubokyfp1.us-west-2.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=brainsshare
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=admin
+DB_PASSWORD="QWE#$asd234"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
