Fix bugs package.json homepage

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,7 +2,7 @@
   "name": "Brainsshare",
   "version": "1.0.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/react-fontawesome": "^0.1.11",
