--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "flux": "^3.1.3",
     "globalize": "^1.5.0",
     "history": "^5.0.0",
+    "kurento-utils": "^6.14.0",
     "lodash.find": "^4.6.0",
     "node-sass": "^4.14.1",
     "react": "^16.7.0-alpha.2",
@@ -38,7 +39,8 @@
     "react-swipeable-views": "^0.13.9",
     "shards-react": "^1.0.0",
     "shortid": "^2.2.15",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "webrtc-adapter": "v6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
