--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,6 +31,8 @@
     "react-big-calendar": "^0.27.0",
     "react-data-table-component": "^6.11.0",
     "react-dom": "^16.7.0-alpha.2",
+    "react-dropzone": "^11.1.0",
+    "react-file-drop": "^3.0.7",
     "react-ga": "^2.5.6",
     "react-images-upload": "^1.2.8",
     "react-loader-spinner": "^3.1.14",
