--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -40,6 +40,7 @@
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-select": "^3.1.0",
     "react-simple-dropdown": "^3.2.3",
     "react-simple-timefield": "^3.2.3",
     "react-swipeable-views": "^0.13.9",
