--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,8 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.9.0",
     "animate.css": "^4.1.0",
     "antd": "^4.6.4",
     "axios": "^0.19.2",
@@ -33,6 +35,8 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-awesome-slider": "^4.1.0",
     "react-big-calendar": "^0.27.0",
+    "react-credit-card-input": "^1.1.5",
+    "react-credit-cards": "^0.8.3",
     "react-data-table-component": "^6.11.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
@@ -56,7 +60,7 @@
     "redux": "^4.0.5",
     "shards-react": "^1.0.0",
     "shortid": "^2.2.15",
-    "styled-components": "^5.1.1",
+    "styled-components": "^5.2.0",
     "video-react": "^0.14.1",
     "webrtc-adapter": "v6.4.0"
   },
