add new feature and fix issues

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,10 +26,12 @@
     "history": "^5.0.0",
     "input-moment": "^0.4.0",
     "kurento-utils": "^6.14.0",
+    "laravel-echo": "^1.8.1",
     "lodash.find": "^4.6.0",
     "material-ui-dropzone": "^3.4.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "node-sass": "^4.14.1",
+    "pusher-js": "^7.0.0",
     "rc-time-picker": "^3.7.3",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
