--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "phpmailer/phpmailer": "^6.1",
+        "pusher/pusher-php-server": "^4.1",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
