--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -43,10 +43,11 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=1080924
+PUSHER_APP_KEY=e89985ed54dad44cf61e
+PUSHER_APP_SECRET=119804731157d7ccf8af
 PUSHER_APP_CLUSTER=mt1
+BROADCAST_DRIVER=pusher
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
