--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -42,8 +42,10 @@
     "react-data-table-component": "^6.11.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
+    "react-facebook-login": "^4.1.1",
     "react-file-drop": "^3.0.7",
     "react-ga": "^2.5.6",
+    "react-google-login": "^5.1.21",
     "react-images-upload": "^1.2.8",
     "react-loader-spinner": "^3.1.14",
     "react-multi-select-component": "^3.0.2",
