--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
     "cldr": "^5.7.0",
+    "cleave.js": "^1.6.0",
     "cross-env": "^5.2.0",
     "dateformat": "^3.0.3",
     "flux": "^3.1.3",
