--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -51,6 +51,7 @@
     "react-loader-spinner": "^3.1.14",
     "react-multi-select-component": "^3.0.2",
     "react-notifications-component": "^2.4.0",
+    "react-plaid-link": "^3.0.0",
     "react-player": "^2.6.2",
     "react-quill": "^1.3.3",
     "react-redux": "^7.2.1",
