--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -17,6 +17,7 @@
         "league/flysystem-aws-s3-v3": "^1.0",
         "phpmailer/phpmailer": "^6.1",
         "pusher/pusher-php-server": "^4.1",
+        "stripe/stripe-php": "^7.57",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
