--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -35,6 +35,7 @@
     "pusher-js": "^7.0.0",
     "rc-time-picker": "^3.7.3",
     "react": "^16.13.1",
+    "react-adsense": "^0.1.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-awesome-slider": "^4.1.0",
     "react-big-calendar": "^0.27.0",
