--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,8 +11,10 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.9.0",
+    "amazon-kinesis-video-streams-webrtc": "^1.0.8",
     "animate.css": "^4.1.0",
     "antd": "^4.6.4",
+    "aws-sdk": "^2.770.0",
     "axios": "^0.19.2",
     "basic-react-timepicker": "^1.0.0",
     "camelize": "^1.0.0",
