--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -41,6 +41,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-awesome-slider": "^4.1.0",
     "react-big-calendar": "^0.27.0",
+    "react-component-whiteboard": "^1.1.1",
     "react-credit-card-input": "^1.1.5",
     "react-credit-cards": "^0.8.3",
     "react-data-table-component": "^6.11.0",
