--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,7 @@
     "flux": "^3.1.3",
     "globalize": "^1.5.0",
     "history": "^5.0.0",
+    "immutable": "^4.0.0-rc.12",
     "input-moment": "^0.4.0",
     "kurento-utils": "^6.14.0",
     "laravel-echo": "^1.8.1",
