--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "cleave.js": "^1.6.0",
     "cross-env": "^5.2.0",
     "dateformat": "^3.0.3",
+    "fabric-whiteboard": "^1.0.19",
     "flux": "^3.1.3",
     "globalize": "^1.5.0",
     "history": "^5.0.0",
