--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -10,9 +10,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=brainsshare
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=brainsshare2
+DB_USERNAME=admin
+DB_PASSWORD="QWE#$asd234"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
