--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -72,6 +72,7 @@
     "react-simple-timefield": "^3.2.3",
     "react-swipeable-views": "^0.13.9",
     "react-time-picker": "^4.0.1",
+    "react-toasts": "^3.0.6",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
     "shards-react": "^1.0.0",
