--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -60,6 +60,7 @@
     "react-images-upload": "^1.2.8",
     "react-loader-spinner": "^3.1.14",
     "react-multi-select-component": "^3.0.2",
+    "react-phone-number-input": "^3.1.6",
     "react-plaid-link": "^3.0.0",
     "react-player": "^2.6.2",
     "react-quill": "^1.3.3",
