--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "cleave.js": "^1.6.0",
     "cross-env": "^5.2.0",
     "dateformat": "^3.0.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "fabric-whiteboard": "^1.0.19",
     "flux": "^3.1.3",
     "globalize": "^1.5.0",
@@ -58,6 +59,7 @@
     "react-ga": "^2.5.6",
     "react-google-login": "^5.1.21",
     "react-images-upload": "^1.2.8",
+    "react-infinite-scroll-component": "^5.1.0",
     "react-loader-spinner": "^3.1.14",
     "react-multi-select-component": "^3.0.2",
     "react-phone-input-2": "^2.13.9",
