--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -39,6 +39,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "node-sass": "^4.14.1",
     "pusher-js": "^7.0.0",
+    "rc-datepicker": "^5.0.16",
     "rc-time-picker": "^3.7.3",
     "react": "^16.13.1",
     "react-adsense": "^0.1.0",
@@ -62,8 +63,8 @@
     "react-infinite-scroll-component": "^5.1.0",
     "react-loader-spinner": "^3.1.14",
     "react-multi-select-component": "^3.0.2",
-    "react-phone-number-input": "^3.1.6",
     "react-phone-input-2": "^2.13.9",
+    "react-phone-number-input": "^3.1.6",
     "react-plaid-link": "^3.0.0",
     "react-player": "^2.6.2",
     "react-quill": "^1.3.3",
