--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,88 +4,51 @@
   "private": true,
   "homepage": "/",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.11.0",
     "amazon-kinesis-video-streams-webrtc": "^1.0.8",
     "animate.css": "^4.1.0",
-    "antd": "^4.6.4",
     "aws-sdk": "^2.770.0",
     "axios": "^0.19.2",
-    "basic-react-timepicker": "^1.0.0",
-    "camelize": "^1.0.0",
     "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
-    "cldr": "^5.7.0",
     "cleave.js": "^1.6.0",
-    "cross-env": "^5.2.0",
-    "dateformat": "^3.0.3",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "cross-env": "5.2.0",
     "fabric-whiteboard": "^1.0.19",
     "flux": "^3.1.3",
-    "globalize": "^1.5.0",
-    "history": "^5.0.0",
-    "immutable": "^4.0.0-rc.12",
-    "input-moment": "^0.4.0",
     "jsonwebtoken": "^8.5.1",
     "kurento-utils": "^6.14.0",
-    "laravel-echo": "^1.8.1",
-    "lodash.find": "^4.6.0",
     "material-ui-dropzone": "^3.4.0",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "node-sass": "^4.14.1",
+    "node-sass": "4.14.1",
     "pusher-js": "^7.0.0",
     "rc-datepicker": "^5.0.16",
-    "rc-time-picker": "^3.7.3",
     "react": "^16.13.1",
     "react-adsense": "^0.1.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-awesome-slider": "^4.1.0",
     "react-big-calendar": "^0.27.0",
-    "react-canvas-draw": "^1.1.1",
-    "react-component-whiteboard": "^1.1.1",
-    "react-credit-card-input": "^1.1.5",
-    "react-credit-cards": "^0.8.3",
     "react-data-table-component": "^6.11.0",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
-    "react-dropdown-select": "^4.6.0",
-    "react-dropzone": "^11.1.0",
     "react-facebook-login": "^4.1.1",
-    "react-file-drop": "^3.0.7",
     "react-ga": "^2.5.6",
     "react-google-login": "^5.1.21",
-    "react-images-upload": "^1.2.8",
     "react-infinite-scroll-component": "^5.1.0",
     "react-loader-spinner": "^3.1.14",
     "react-multi-select-component": "^3.0.2",
     "react-phone-input-2": "^2.13.9",
-    "react-phone-number-input": "^3.1.6",
-    "react-plaid-link": "^3.0.0",
-    "react-player": "^2.6.2",
     "react-quill": "^1.3.3",
-    "react-redux": "^7.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "react-select": "^3.1.0",
-    "react-simple-dropdown": "^3.2.3",
-    "react-simple-timefield": "^3.2.3",
     "react-swipeable-views": "^0.13.9",
-    "react-time-picker": "^4.0.1",
     "react-toasts": "^3.0.6",
-    "reactstrap": "^8.5.1",
-    "redux": "^4.0.5",
     "shards-react": "^1.0.0",
     "shortid": "^2.2.15",
     "stream-chat": "^2.6.0",
     "stream-chat-react": "^3.0.2",
-    "styled-components": "^5.2.0",
-    "video-react": "^0.14.1",
-    "webrtc-adapter": "v6.4.0"
+    "styled-components": "^5.2.1",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
