--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-awesome-slider": "^4.1.0",
     "react-big-calendar": "^0.27.0",
+    "react-calendar": "~3.3.1",
     "react-data-table-component": "^6.11.0",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
